--- a/app/src/main/res/layout/fragment_seleccionado.xml
+++ b/app/src/main/res/layout/fragment_seleccionado.xml
@@ -1,41 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/seleccionadoLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:padding="12dp">
 
+    <!-- Título -->
     <TextView
         android:id="@+id/tituloSeleccionado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
         android:text="Productos Seleccionados"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:paddingBottom="8dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- RecyclerView -->
+
+    <!-- Total -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewSeleccionado"
-        android:layout_width="match_parent"
-        android:layout_height="583dp"
+        android:layout_width="383dp"
+        android:layout_height="613dp"
         android:clipToPadding="false"
-        android:padding="4dp" />
+        android:padding="4dp"
+        app:layout_constraintBottom_toTopOf="@id/textTotal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tituloSeleccionado"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <!-- Botón WhatsApp -->
+
     <TextView
         android:id="@+id/textTotal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="8dp"
+        android:paddingBottom="8dp"
         android:text="Total: S/ 0.00"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_gravity="end"
-        android:paddingBottom="8dp"/>
+        app:layout_constraintBottom_toTopOf="@id/btnEnviarWhatsApp"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btnEnviarWhatsApp"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="68dp"
         android:backgroundTint="@android:color/holo_green_dark"
         android:text="Enviar a WhatsApp"
-        android:textColor="@android:color/white" />
-</LinearLayout>
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
